# Evil-Trace

./: .gitignore  README.md  pnpm-workspace.yaml  pyproject.toml
eviltrace/: LICENSE  README.md  accuracy_report.md  app.py  architecture.md  demo_script.md  evidence_dataset.md  main.py  requirements.txt
eviltrace/agents/: audit_logger.py  collector.py  hypothesis.py  ioc_enrichment.py  reporter.py  self_corrector.py  tool_runner.py  verifier.py
eviltrace/evidence_input/: README.md
eviltrace/providers/: base.py  exa.py  gemini.py  mock.py  ollama.py  openrouter.py
eviltrace/sample_evidence/: powershell_events.csv  sysmon_sample.json
eviltrace/test_evidence/: powershell_events.csv
eviltrace/tests/: test_eviltrace.py
eviltrace/utils/: database.py  ioc_extractor.py  mitre_mapper.py  parsers.py  scoring.py  timeline.py
