[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "pandas>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "tabulate>=0.10.0",
]
